updated fix:mobile end overflow-x

--- a/stylesheet/global.scss
+++ b/stylesheet/global.scss
@@ -41,6 +41,7 @@ a{
 @media screen and (max-width:876px){
     .container{
         padding-bottom: 280px;
+        overflow-x: hidden;
     }
     .basic{
         width: 100%;
